edit drive items

--- a/index.html
+++ b/index.html
@@ -71,83 +71,105 @@
                         src="https://lh3.googleusercontent.com/vq6ZjR72IcEKRh3QtkVrf2BXsZIOgljo8yGevO2rSVtl3mSxSDKvWfFAGxMxCYbPLGiovGk-gk0kA2csKSPHQKog-zTmNjRtmh6VkA=s0">
                 </div>
             </section>
-            <section class="drive drive__features">
-                <div class="drive__item-container">
-                    <img class="drive__item-icon"
-                        src="https://kstatic.googleusercontent.com/files/eea9db083417eec76592d1aebc1ad4d545d9539a2fd3b4c5f2ae88bc2286583596ac5e714def676d8026e17177f5974c2095ca3d815446e64ac5609e906f3e5e">
-                    <h2 class="drive__item-title">
-                        Nội dung của bạn luôn được an toàn, riêng tư và không bao giờ bị dùng để cá nhân hóa quảng cáo
-                    </h2>
-                    <p class="drive__item-description">
-                        Drive cấp quyền truy cập vào các tệp của bạn một cách an toàn và mã hóa. Drive chủ động quét
-                        những tệp được chia sẻ với bạn và xóa tệp khi phát hiện thấy phần mềm độc hại, thư rác, phần mềm
-                        tống tiền hoặc hoạt động lừa đảo. Ngoài ra, Drive là ứng dụng có nền tảng đám mây, nhờ vậy bạn
-                        không cần phải lưu tệp trên thiết bị và giảm thiểu rủi ro xảy ra với các thiết bị của bạn.
-                    </p>
-                </div>
-                <div class="drive__item-image">
-                    <img
-                        src="https://lh3.googleusercontent.com/O7uh86FkoKSeAr1S-e48DidDrRvUJDO9pY-c7e9r-Nm555C4iACq8DoVgj73MpMGOSzKEE7PRXI-VJYMIrNXbYySFNvHzOIPChFCaOPRP37BwzdFCQ=s0">
+            <section class="drive__features">
+                <div class="drive__item">
+                    <div class="drive__item-container">
+                        <img class="drive__item-icon"
+                            src="https://kstatic.googleusercontent.com/files/eea9db083417eec76592d1aebc1ad4d545d9539a2fd3b4c5f2ae88bc2286583596ac5e714def676d8026e17177f5974c2095ca3d815446e64ac5609e906f3e5e">
+                        <h2 class="drive__item-title">
+                            Nội dung của bạn luôn được an toàn, riêng tư và không bao giờ bị dùng để cá nhân hóa quảng
+                            cáo
+                        </h2>
+                        <p class="drive__item-description">
+                            Drive cấp quyền truy cập vào các tệp của bạn một cách an toàn và mã hóa. Drive chủ động quét
+                            những tệp được chia sẻ với bạn và xóa tệp khi phát hiện thấy phần mềm độc hại, thư rác, phần
+                            mềm
+                            tống tiền hoặc hoạt động lừa đảo. Ngoài ra, Drive là ứng dụng có nền tảng đám mây, nhờ vậy
+                            bạn
+                            không cần phải lưu tệp trên thiết bị và giảm thiểu rủi ro xảy ra với các thiết bị của bạn.
+                        </p>
+                    </div>
+                    <div class="drive__item-image">
+                        <img style="width: auto;"
+                            src="https://lh3.googleusercontent.com/O7uh86FkoKSeAr1S-e48DidDrRvUJDO9pY-c7e9r-Nm555C4iACq8DoVgj73MpMGOSzKEE7PRXI-VJYMIrNXbYySFNvHzOIPChFCaOPRP37BwzdFCQ=s0">
 
+                    </div>
                 </div>
-            </section>
-            <section class="drive drive__platform">
-                <div class="drive__item-container">
-                    <img class="drive__item-icon"
-                        src="https://kstatic.googleusercontent.com/files/8317f83271acdf124799a6f1888da1313d29696309f46e1876ad3216e5ae3d5cb9049b45b58cc1f201f1293badbf9046a664652e019b5574a7e8979964bff928">
-                    <h2 class="drive__item-title">
-                        Các ứng dụng cộng tác trên nền tảng đám mây giúp cải thiện tối đa hiệu quả làm việc theo nhóm
-                    </h2>
-                    <p class="drive__item-description">
-                        Drive tích hợp liền mạch với Tài liệu, Trang tính và Trang trình bày, các ứng dụng có nền tảng
-                        đám mây giúp nhóm của bạn cộng tác hiệu quả theo thời gian thực. Tạo và chia sẻ nội dung với
-                        nhóm của bạn ngay từ ngày đầu, mà không cần phải tách khỏi những công cụ hiện có.
-                    </p>
+                <div class="drive__item">
+                    <div class="drive__item-container">
+                        <img class="drive__item-icon"
+                            src="https://kstatic.googleusercontent.com/files/8317f83271acdf124799a6f1888da1313d29696309f46e1876ad3216e5ae3d5cb9049b45b58cc1f201f1293badbf9046a664652e019b5574a7e8979964bff928">
+                        <h2 class="drive__item-title">
+                            Các ứng dụng cộng tác trên nền tảng đám mây giúp cải thiện tối đa hiệu quả làm việc theo
+                            nhóm
+                        </h2>
+                        <p class="drive__item-description">
+                            Drive tích hợp liền mạch với Tài liệu, Trang tính và Trang trình bày, các ứng dụng có nền
+                            tảng
+                            đám mây giúp nhóm của bạn cộng tác hiệu quả theo thời gian thực. Tạo và chia sẻ nội dung với
+                            nhóm của bạn ngay từ ngày đầu, mà không cần phải tách khỏi những công cụ hiện có.
+                        </p>
+                    </div>
+                    <div class="drive__item-image">
+                        <img
+                            src="https://lh3.googleusercontent.com/KOWQOT_D7NGb3AlhaXBiU3nGYJ6QwKvVhKsdm6UwiIOS15T4bgx7zynlbanpvU61kFBYBV21-v_PSAG4K3do1zw69lpIT2LiISiH=s0">
+                    </div>
                 </div>
-                <div class="drive__item-image">
-                    <img
-                        src="https://lh3.googleusercontent.com/KOWQOT_D7NGb3AlhaXBiU3nGYJ6QwKvVhKsdm6UwiIOS15T4bgx7zynlbanpvU61kFBYBV21-v_PSAG4K3do1zw69lpIT2LiISiH=s0">
+                <div class="drive__item">
+                    <div class="drive__item-container">
+                        <img class="drive__item-icon"
+                            src="https://kstatic.googleusercontent.com/files/eea6c181578777b6eeefd9042e51e9284c4443b3ea45c13e64a1f9c976af2faf69235f792329961d1495c5f49405d54c6344dd53f536c8191b5a79f87ce5d382">
+                        <h2 class="drive__item-title">
+                            Tích hợp với các công cụ và ứng dụng mà nhóm của bạn đang sử dụng
+                        </h2>
+                        <p class="drive__item-description">
+                            Drive có tích hợp và hỗ trợ công nghệ mà nhóm của bạn hiện đang sử dụng. Cộng tác trong các
+                            tệp
+                            Microsoft Office mà không cần phải chuyển đổi định dạng tệp. Bạn cũng có thể chỉnh sửa và
+                            lưu
+                            trữ hơn 100 loại tệp khác, bao gồm cả tệp PDF, tệp CAD, tệp hình ảnh và nhiều loại tệp khác.
+                        </p>
+                    </div>
+                    <div class="drive__item-image">
+                        <img
+                            src="https://lh3.googleusercontent.com/vR2eJFKYD-U7QZ1kFojPIUYOQsQ_yHFIioJ3mcwGmdv66FoHvnZUs4wvxxPvm0R1WxedzybK-Y-T0paASaylY9ToogLxlsl-bIgU=s0">
+                    </div>
                 </div>
-            </section>
-            <section class="drive drive__customers">
-                <div class="drive__item-container">
-                    <img class="drive__item-icon"
-                        src="https://kstatic.googleusercontent.com/files/eea6c181578777b6eeefd9042e51e9284c4443b3ea45c13e64a1f9c976af2faf69235f792329961d1495c5f49405d54c6344dd53f536c8191b5a79f87ce5d382">
-                    <h2 class="drive__item-title">
-                        Tích hợp với các công cụ và ứng dụng mà nhóm của bạn đang sử dụng
-                    </h2>
-                    <p class="drive__item-description">
-                        Drive có tích hợp và hỗ trợ công nghệ mà nhóm của bạn hiện đang sử dụng. Cộng tác trong các tệp
-                        Microsoft Office mà không cần phải chuyển đổi định dạng tệp. Bạn cũng có thể chỉnh sửa và lưu
-                        trữ hơn 100 loại tệp khác, bao gồm cả tệp PDF, tệp CAD, tệp hình ảnh và nhiều loại tệp khác.
-                    </p>
-                </div>
-                <div class="drive__item-image">
-                    <img
-                        src="https://lh3.googleusercontent.com/vR2eJFKYD-U7QZ1kFojPIUYOQsQ_yHFIioJ3mcwGmdv66FoHvnZUs4wvxxPvm0R1WxedzybK-Y-T0paASaylY9ToogLxlsl-bIgU=s0">
-                </div>
-            </section>
-            <section class="drive drive__statistics">
-                <div class="drive__item-container">
-                    <img class="drive__item-icon"
-                        src="https://kstatic.googleusercontent.com/files/1215f100aed56568e58a202bef5caf51ebcc316ed033a7d042d6d6c1f90f56c39e5633d0fcb521d98e3d40022e901c535be27f73510c7d95e0bf39c861bd46ff">
-                    <h2 class="drive__item-title">
-                        Công nghệ tìm kiếm và AI (trí tuệ nhân tạo) của Google giúp nhóm của bạn làm việc hiệu quả hơn
-                    </h2>
-                    <p class="drive__item-description">
-                        Các chức năng tìm kiếm mạnh mẽ của Google được nhúng trong Drive và đem đến tốc độ, hiệu suất và
-                        độ tin cậy chưa từng có. Các tính năng như Chế độ ưu tiên sử dụng AI (trí tuệ nhân tạo) để dự
-                        đoán nội dung bạn đang tìm kiếm và hiển thị nội dung phù hợp nhất, giúp nhóm của bạn tìm thấy
-                        các tệp nhanh hơn đến 50%.
-                    </p>
-                </div>
-                <div class="drive__item-image">
-                    <img
-                        src="https://lh3.googleusercontent.com/TIze8VGPsxhAWglK1i4ROYTGK426IFRtLQ43uzkMRYUlEZsHQKhYfXQWjVOKUFGKN1l2Cboam1lM4uo4e6kpyTsaunMM00hB5y0Pn7A=s0">
+                <div class="drive__item">
+                    <div class="drive__item-container">
+                        <img class="drive__item-icon"
+                            src="https://kstatic.googleusercontent.com/files/1215f100aed56568e58a202bef5caf51ebcc316ed033a7d042d6d6c1f90f56c39e5633d0fcb521d98e3d40022e901c535be27f73510c7d95e0bf39c861bd46ff">
+                        <h2 class="drive__item-title">
+                            Công nghệ tìm kiếm và AI (trí tuệ nhân tạo) của Google giúp nhóm của bạn làm việc hiệu quả
+                            hơn
+                        </h2>
+                        <p class="drive__item-description">
+                            Các chức năng tìm kiếm mạnh mẽ của Google được nhúng trong Drive và đem đến tốc độ, hiệu
+                            suất và
+                            độ tin cậy chưa từng có. Các tính năng như Chế độ ưu tiên sử dụng AI (trí tuệ nhân tạo) để
+                            dự
+                            đoán nội dung bạn đang tìm kiếm và hiển thị nội dung phù hợp nhất, giúp nhóm của bạn tìm
+                            thấy
+                            các tệp nhanh hơn đến 50%.
+                        </p>
+                    </div>
+                    <div class="drive__item-image">
+                        <img
+                            src="https://lh3.googleusercontent.com/TIze8VGPsxhAWglK1i4ROYTGK426IFRtLQ43uzkMRYUlEZsHQKhYfXQWjVOKUFGKN1l2Cboam1lM4uo4e6kpyTsaunMM00hB5y0Pn7A=s0">
+                    </div>
                 </div>
             </section>
             <div class="break-line"></div>
-            <section class="drive drive__tools">
+            <section class="drive__platform">
+
+            </section>
+            <section class="drive__customers">
+
+            </section>
+            <section class="drive__statistics">
+
+            </section>
+            <section class="drive__tools">
                 <div class="drive__tools-container"></div>
                 <div class="drive__item-image"></div>
             </section>
