--- a/index.html
+++ b/index.html
@@ -160,9 +160,27 @@
                 </div>
             </section>
             <div class="break-line"></div>
-            <section class="drive__platform">
 
+            <section class="drive__platform">
+                <h2 class="drive__platform-title">Trải nghiệm Drive trên mọi thiết bị</h2>
+                <p class="drive__platform-description">Drive hoạt động trên tất cả các nền tảng chính, giúp bạn làm việc
+                    liền mạch trên trình duyệt, thiết bị di động, máy tính bảng và máy tính.</p>
+                <div class="drive__platform-icons">
+                    <a href="#" class="ios">
+                        <img src="https://kstatic.googleusercontent.com/files/540ac1df440f3a3708b6f31b7fa0c4fd7fd4471dc0614cab5482e110dee791fd6492b009e67d1bbc3467bd6ac63785f5120cb8070ab95de32830c63975290455"
+                            class="drive__platform-icon ios-download" alt="AppStore">
+                    </a>
+                    <a href="#" class="android">
+                        <img src="https://kstatic.googleusercontent.com/files/6e1905e140550741a844d866fa3fd7c11f4a9d6cb84081b66fe973ee7c0afd03e548ccf9cdf7d671c9d3f301e593b53bc2050a06d900daf13acb0b267d88e691"
+                            class="drive__platform-icon android-download" alt="PlayStore">
+                    </a>
+                </div>
+                <div class="drive__platform-links">
+                    <a href="#" class="link-go">Truy cập vào Drive</a>
+                    <a href="#" class="link-try">Dùng thử Drive cho nhóm của bạn</a>
+                </div>
             </section>
+
             <section class="drive__customers">
 
             </section>
