add customers, statistics, tools

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                     </div>
                 </div>
             </section>
+
             <div class="break-line"></div>
 
             <section class="drive__platform">
@@ -182,14 +183,168 @@
             </section>
 
             <section class="drive__customers">
-
+                <h2 class="drive__customers-title">Hàng nghìn nhóm đã sử dụng Drive để cách mạng hóa cách làm việc của
+                    họ
+                </h2>
+                <div class="drive__customers-sliders">
+                    <div class="drive__customers-slider-1">
+                        <div class="drive__customers-sliders-icon">
+                            <img
+                                src="https://kstatic.googleusercontent.com/files/56d87c8f379a15041193391b51180fbb5935b90f781e9fd4c986c708a7bba4feb63e4a2bedd40f59781db773aed145886961efa322e1132a0ffbd5cf89841399">
+                        </div>
+                        <div class="drive__customers-sliders-heading">
+                            <h3>
+                                “Hầu hết thành viên trong nhóm chúng tôi đều đã quen dùng Drive và thấy Drive rất trực
+                                quan
+                                và dễ sử dụng. Vì vậy, chúng tôi không cần phải tập cách thích nghi và nhanh chóng sử
+                                dụng
+                                được ứng dụng này.”
+                            </h3>
+                        </div>
+                        <div class="drive__customers-sliders-link">
+                            <a href="#">Read Story</a>
+                        </div>
+                        <div class="drive__customers-btn btn-prev-slider">
+                            <span class="material-icons">
+                                chevron_left
+                            </span>
+                        </div>
+                        <div class="drive__customers-btn btn-next-slider">
+                            <span class="material-icons">
+                                chevron_right
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="drive__customers-dot">cham cham cham</div>
+                <div class="drive__customers-icons">
+                    <img src="https://kstatic.googleusercontent.com/files/f86032e4b76c46e9f9411776f487227f83e61f4c2769a19cb8fd7d53a6b35dd0d12d4981f7f205d69b4d397a36d604ae5f329e83d183077efff1563e0aa3ab67"
+                        alt="Biểu tượng">
+                    <img src="https://kstatic.googleusercontent.com/files/29b792a68930582e72cce6abdce5910a7f6898fec14fdbf07036c725230cd613d2d1f80657fa696b85eff8c2282f98628601386805cedfb5b24d5b3f6108df4e"
+                        alt="Biểu tượng">
+                    <img src="https://kstatic.googleusercontent.com/files/3663ffbbf7255f1162366ed27679f72255a34fb98098d9ea80bf278b25f0d7e339040179651973c90be939c5149dc70faf800494209f0c1bca830a1bcc2f32b7"
+                        alt="Biểu tượng">
+                    <img src="https://kstatic.googleusercontent.com/files/5a6cf652e91b79403fa438b24bd679778e1063b67889da8d50ec9b4b05eceac54d3d59d49fe5853a36fefc19665f284b518b083866f3c3a63983ac9439d9bc52"
+                        alt="Biểu tượng">
+                    <img src="https://kstatic.googleusercontent.com/files/23093c1b646ca8f5100d596668d21ff720ec57445cbd6cce1d546002cf54a598fafe90d14bdaf6196ff62f66c73a4dc14d29b5bcb63b9ba5026d7efaf6a5c003"
+                        alt="Biểu tượng">
+                </div>
             </section>
             <section class="drive__statistics">
-
+                <div class="drive__statistics-container">
+                    <h2 class="drive__statistics-title">Người dùng thích Drive hơn các sản phẩm cạnh tranh</h2>
+                    <p class="drive__statistics-description">NGUỒN: G2.COM, INC., THÁNG 2 NĂM 2020</p>
+                </div>
+                <div class="drive__statistics-charts">
+                    <div class="chart-item">
+                        <div class="chart-item-name">
+                            <a href="#">
+                                <img
+                                    src="https://kstatic.googleusercontent.com/files/5017f55c765740037897cfbd075cf8ddaf1f132af8a2546e9de6330c86e0ea31597d182f2ee763584cb45db92cea96aa4995944546c595dd5ddcb043a279ec91">
+                            </a>
+                        </div>
+                        <div class="chart-item-view">
+                            <h3 class="view-number active">4.7</h3>
+                            <div class="view-outer active">
+                                <div class="view-inner active"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="chart-item">
+                        <div class="chart-item-name">
+                            <a href="#">
+                                <img
+                                    src="https://kstatic.googleusercontent.com/files/ae0cd5d1a3755f3941ee7caf636a7e7f86c1e259631a828b0b19a6a8afc5e66b011b084cb6b6a776d229001cf9dfb0d246f7701d9236cc9591825702878344ed">
+                            </a>
+                        </div>
+                        <div class="chart-item-view">
+                            <h3 class="view-number">4.0</h3>
+                            <div class="view-outer">
+                                <div class="view-inner"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="chart-item">
+                        <div class="chart-item-name">
+                            <a href="#">
+                                <img
+                                    src="https://kstatic.googleusercontent.com/files/66cc7c5e9c2e3c271f4bf5dda4253b3d59aa57ac9a7e1521f03c4800bb924508c07a5b1fe9b47e3456cd13698934dd3f5e40e1347200869a87ca03b97129b932">
+                            </a>
+                        </div>
+                        <div class="chart-item-view">
+                            <h3 class="view-number">4.0</h3>
+                            <div class="view-outer">
+                                <div class="view-inner"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="chart-item">
+                        <div class="chart-item-name">
+                            <a href="#">
+                                <img
+                                    src="https://kstatic.googleusercontent.com/files/b729ad3dc1406d936d264aa1a71a56da6fc2d98c14c37ec2237682bd67f621503cf0f5cc75718387e709add303bf343f872eda83b0d4cfd28df7fbc4e1fd27de">
+                            </a>
+                        </div>
+                        <div class="chart-item-view">
+                            <h3 class="view-number">4.0</h3>
+                            <div class="view-outer">
+                                <div class="view-inner"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
+
+            <div class="break-line"></div>
+
             <section class="drive__tools">
-                <div class="drive__tools-container"></div>
-                <div class="drive__item-image"></div>
+                <div class="drive__tools-heading">
+                    <h2>Drive tích hợp với các công cụ mà nhóm của bạn đang sử dụng</h2>
+                </div>
+                <ul class="drive__tools-company">
+                    <li>
+                        <a href="https://acrobat.adobe.com/us/en/business/integrations/google-drive.html"
+                            target="_blank" rel="noopener noreferrer" aria-label="Biểu tượng">
+                            <img src="https://kstatic.googleusercontent.com/files/667fa0a2a1aa16fb1a877a3b3f2725cc03b156c36f458422c4279744e3cdd67fa75470b541ba1018ca6628e1126131a49c24e918f919a4e4ee10923f1d48ca8c"
+                                class="drive__tools-company-icon" alt="Biểu tượng">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://marketplace.atlassian.com/apps/1216484/google-drive-docs-for-confluence?hosting=cloud&amp;tab=overview"
+                            target="_blank" rel="noopener noreferrer" aria-label="Biểu tượng">
+                            <img src="https://kstatic.googleusercontent.com/files/686902a5a73584f00448ecb41b20642e6a67bb8a30856e62f31cec5a5658f0c230d7e4d985e6bb735be91b7bc43026e1dfc5a17abf22f20aebbfe39527b620c7"
+                                class="drive__tools-company-icon" alt="Biểu tượng">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://blogs.autodesk.com/autocad/autocad-2021/" target="_blank"
+                            rel="noopener noreferrer" aria-label="Biểu tượng">
+                            <img src="https://kstatic.googleusercontent.com/files/502e1e2bcf1d734194ada6a0404463ea623c3c5eb170ce7ca5a8b95febfce2be839280662ef8b350a6605e79e86a6254e1d9160a3ba1de29d2bd0b0506f46194"
+                                class="drive__tools-company-icon" alt="Biểu tượng">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.docusign.com/partner/docusign-google-drive" target="_blank"
+                            rel="noopener noreferrer" aria-label="Biểu tượng">
+                            <img src="https://kstatic.googleusercontent.com/files/7ab7238bb2adf87b4b0a5a4b51d04a8c00269e10761a786f6d025ad7f5f79c56d83a71251e9b8c650de502ad431cc3c2a5d60561595e6f41a3a6ff5d57247649"
+                                class="drive__tools-company-icon" alt="Biểu tượng">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://help.salesforce.com/articleView?id=admin_files_connect_google_xds.htm&amp;type=5"
+                            target="_blank" rel="noopener noreferrer" aria-label="Biểu tượng">
+                            <img src="https://kstatic.googleusercontent.com/files/29a8b6c367123fbc5365cd156b12d35427fa7640e6af546d59af38dff162fe82ee529cdcb82ea31f5a4bb8687a492966528c0222706e5017d0d0ec4b7324bd31"
+                                class="drive__tools-company-icon" alt="Biểu tượng">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://slack.com/apps/A6NL8MJ6Q-google-drive" target="_blank"
+                            rel="noopener noreferrer" aria-label="Biểu tượng">
+                            <img src="https://kstatic.googleusercontent.com/files/7f3a6ff42f9b19117c333a2cecdb09c083cdc5ef945fd616124dd56b7d740baee34b7a518ba2f7013f0f560dbed6c49cad94d6f758444822f755506cc3683e3b"
+                                class="drive__tools-company-icon" alt="Biểu tượng">
+                        </a>
+                    </li>
+                </ul>
             </section>
             <section class="get_started"></section>
             <section class="resources"></section>
