add footer and more

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/animation.css" />
     <title>Google Drive</title>
 </head>
@@ -21,7 +22,7 @@
                 <img src="https://kstatic.googleusercontent.com/files/f4b4fbcc6119576da7ab3f68270196009fc1b16f1927910842d793c385115593b6dd5fbe9a1e21fe64f3cbbc509c3a02c95ebc9635f76c355282482986f1fe7d"
                     alt="logo-driver" />
                 <div class="header__logo-container">
-                    <h4 class="header__logo--google">Google</h4>
+                    <h4 class="header__logo--google logo-google">Google</h4>
                     <p class="header__logo--product">Drive</p>
                 </div>
             </a>
@@ -233,7 +234,7 @@
             <section class="drive__statistics">
                 <div class="drive__statistics-container">
                     <h2 class="drive__statistics-title">Người dùng thích Drive hơn các sản phẩm cạnh tranh</h2>
-                    <p class="drive__statistics-description">NGUỒN: G2.COM, INC., THÁNG 2 NĂM 2020</p>
+                    <p class="drive__statistics-description"><a href="#">NGUỒN:</a> G2.COM, INC., THÁNG 2 NĂM 2020</p>
                 </div>
                 <div class="drive__statistics-charts">
                     <div class="chart-item">
@@ -303,55 +304,165 @@
                 </div>
                 <ul class="drive__tools-company">
                     <li>
-                        <a href="https://acrobat.adobe.com/us/en/business/integrations/google-drive.html"
-                            target="_blank" rel="noopener noreferrer" aria-label="Biểu tượng">
-                            <img src="https://kstatic.googleusercontent.com/files/667fa0a2a1aa16fb1a877a3b3f2725cc03b156c36f458422c4279744e3cdd67fa75470b541ba1018ca6628e1126131a49c24e918f919a4e4ee10923f1d48ca8c"
-                                class="drive__tools-company-icon" alt="Biểu tượng">
+                        <a href="#">
+                            <img
+                                src="https://kstatic.googleusercontent.com/files/667fa0a2a1aa16fb1a877a3b3f2725cc03b156c36f458422c4279744e3cdd67fa75470b541ba1018ca6628e1126131a49c24e918f919a4e4ee10923f1d48ca8c">
                         </a>
                     </li>
                     <li>
-                        <a href="https://marketplace.atlassian.com/apps/1216484/google-drive-docs-for-confluence?hosting=cloud&amp;tab=overview"
-                            target="_blank" rel="noopener noreferrer" aria-label="Biểu tượng">
-                            <img src="https://kstatic.googleusercontent.com/files/686902a5a73584f00448ecb41b20642e6a67bb8a30856e62f31cec5a5658f0c230d7e4d985e6bb735be91b7bc43026e1dfc5a17abf22f20aebbfe39527b620c7"
-                                class="drive__tools-company-icon" alt="Biểu tượng">
+                        <a href="#">
+                            <img
+                                src="https://kstatic.googleusercontent.com/files/686902a5a73584f00448ecb41b20642e6a67bb8a30856e62f31cec5a5658f0c230d7e4d985e6bb735be91b7bc43026e1dfc5a17abf22f20aebbfe39527b620c7">
                         </a>
                     </li>
                     <li>
-                        <a href="https://blogs.autodesk.com/autocad/autocad-2021/" target="_blank"
-                            rel="noopener noreferrer" aria-label="Biểu tượng">
-                            <img src="https://kstatic.googleusercontent.com/files/502e1e2bcf1d734194ada6a0404463ea623c3c5eb170ce7ca5a8b95febfce2be839280662ef8b350a6605e79e86a6254e1d9160a3ba1de29d2bd0b0506f46194"
-                                class="drive__tools-company-icon" alt="Biểu tượng">
+                        <a href="#">
+                            <img
+                                src="https://kstatic.googleusercontent.com/files/502e1e2bcf1d734194ada6a0404463ea623c3c5eb170ce7ca5a8b95febfce2be839280662ef8b350a6605e79e86a6254e1d9160a3ba1de29d2bd0b0506f46194">
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.docusign.com/partner/docusign-google-drive" target="_blank"
-                            rel="noopener noreferrer" aria-label="Biểu tượng">
-                            <img src="https://kstatic.googleusercontent.com/files/7ab7238bb2adf87b4b0a5a4b51d04a8c00269e10761a786f6d025ad7f5f79c56d83a71251e9b8c650de502ad431cc3c2a5d60561595e6f41a3a6ff5d57247649"
-                                class="drive__tools-company-icon" alt="Biểu tượng">
+                        <a href="#">
+                            <img
+                                src="https://kstatic.googleusercontent.com/files/7ab7238bb2adf87b4b0a5a4b51d04a8c00269e10761a786f6d025ad7f5f79c56d83a71251e9b8c650de502ad431cc3c2a5d60561595e6f41a3a6ff5d57247649">
                         </a>
                     </li>
                     <li>
-                        <a href="https://help.salesforce.com/articleView?id=admin_files_connect_google_xds.htm&amp;type=5"
-                            target="_blank" rel="noopener noreferrer" aria-label="Biểu tượng">
-                            <img src="https://kstatic.googleusercontent.com/files/29a8b6c367123fbc5365cd156b12d35427fa7640e6af546d59af38dff162fe82ee529cdcb82ea31f5a4bb8687a492966528c0222706e5017d0d0ec4b7324bd31"
-                                class="drive__tools-company-icon" alt="Biểu tượng">
+                        <a href="#">
+                            <img
+                                src="https://kstatic.googleusercontent.com/files/29a8b6c367123fbc5365cd156b12d35427fa7640e6af546d59af38dff162fe82ee529cdcb82ea31f5a4bb8687a492966528c0222706e5017d0d0ec4b7324bd31">
                         </a>
                     </li>
                     <li>
-                        <a href="https://slack.com/apps/A6NL8MJ6Q-google-drive" target="_blank"
-                            rel="noopener noreferrer" aria-label="Biểu tượng">
-                            <img src="https://kstatic.googleusercontent.com/files/7f3a6ff42f9b19117c333a2cecdb09c083cdc5ef945fd616124dd56b7d740baee34b7a518ba2f7013f0f560dbed6c49cad94d6f758444822f755506cc3683e3b"
-                                class="drive__tools-company-icon" alt="Biểu tượng">
+                        <a href="#">
+                            <img
+                                src="https://kstatic.googleusercontent.com/files/7f3a6ff42f9b19117c333a2cecdb09c083cdc5ef945fd616124dd56b7d740baee34b7a518ba2f7013f0f560dbed6c49cad94d6f758444822f755506cc3683e3b">
                         </a>
                     </li>
                 </ul>
             </section>
-            <section class="get_started"></section>
+            <section class="get_started">
+                <div class="get_started__heading">
+                    <h2>Hãy bắt đầu</h2>
+                </div>
+                <div class="get_started__container">
+                    <div class="get_started__box">
+                        <div class="box-header">
+                            <img
+                                src="https://kstatic.googleusercontent.com/files/b12e6f3834aab6acea75b7cff5d1a1406d6413ba284b2bd69f3dd8a2d3c3f5ad393bcc8b0549f579d2c6294f5a367e7ca5acea7e6d821830de41df82b9f2a682">
+                        </div>
+                        <div class="box-body">
+                            <h3 class="box-body-title">Cá nhân</h3>
+                            <p class="box-body-description">Lưu trữ, chia sẻ và truy cập các tệp và thư mục thông qua
+                                mọi thiết bị di động, máy tính bảng hoặc máy tính. Bạn được miễn phí 15 GB dung lượng
+                                lưu trữ đầu tiên.</p>
+                        </div>
+                        <div class="box-link"><a href="#">Truy cập Google Drive</a></div>
+                    </div>
+
+                    <div class="get_started__box">
+                        <div class="box-header">
+                            <img
+                                src="https://kstatic.googleusercontent.com/files/64ff889abf61c815891d25f9ac651f5f94bc7bd561eb76dd56c98bb9c9bfd5cb0594299a8455cfd644dae73d2d284acd5d54bcd1a489a6106e3e1838bff36818">
+                        </div>
+                        <div class="box-body">
+                            <h3 class="box-body-title">Nhóm</h3>
+                            <p class="box-body-description">Giúp nhóm của bạn làm việc hiệu quả hơn nhờ nền tảng cộng
+                                tác an toàn dựa trên đám mây, giúp bạn dễ dàng chia sẻ, lưu trữ và truy cập vào các tệp.
+                            </p>
+                        </div>
+                        <div class="box-link"><a href="#">Dùng thử Drive cho nhóm bạn</a></div>
+                    </div>
+
+                    <div class="get_started__box">
+                        <div class="box-header">
+                            <img
+                                src="https://kstatic.googleusercontent.com/files/889ba0564c17f5c853c5ad8b0a404c5335075d83ef847850f91e968bf1ac4c31d040277a1c1c60b6766ec02d92eab724cb616b6721fb8683f3ec6a5176083fc5">
+                        </div>
+                        <div class="box-body">
+                            <h3 class="box-body-title">Doanh nghiệp</h3>
+                            <p class="box-body-description">Bảo vệ và bảo đảm an toàn cho dữ liệu của công ty bạn bằng
+                                tính năng Ngăn chặn mất dữ liệu, công nghệ Vault dùng cho eDiscovery và công tác lưu trữ
+                                dữ liệu, cùng với trung tâm bảo mật.</p>
+                        </div>
+                        <div class="box-link"><a href="#">Tìm hiểu thêm</a></div>
+                    </div>
+
+                </div>
+            </section>
             <section class="resources"></section>
         </section>
 
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <nav class="footer__site-links">
+            <div class="footer__site-link">
+                <div class="footer__site-link-header">Nâng cấp Drive</div>
+                <ul class="footer__site-link-list">
+                    <li> <a href="#">Cá nhân – Google One</a></li>
+                    <li><a href="#">Nhóm – Dùng thử Drive miễn phí</a></li>
+                    <li><a href="#">Google Workspace Essentials</a></li>
+                </ul>
+            </div>
+
+            <div class="footer__site-link">
+                <div class="footer__site-link-header">Nội dung tải xuống</div>
+                <ul class="footer__site-link-list">
+                    <li> <a href="#">Drive cho Mac/PC</a></li>
+                    <li><a href="#">Drive cho Android</a></li>
+                    <li><a href="#">Drive cho iOS</a></li>
+                </ul>
+            </div>
+            <div class="footer__site-link">
+                <div class="footer__site-link-header">Tài nguyên</div>
+                <ul class="footer__site-link-list">
+                    <li> <a href="#">Blog Google Drive</a></li>
+                </ul>
+            </div>
+            <div class="footer__site-link">
+                <div class="footer__site-link-header">Hỗ trợ</div>
+                <ul class="footer__site-link-list">
+                    <li> <a href="#">Trung tâm trợ giúp</a></li>
+                    <li><a href="#">Diễn đàn trợ giúp Google Drive</a></li>
+                    <li><a href="#">Liên hệ với chúng tôi</a></li>
+                </ul>
+            </div>
+            <div class="footer__site-link">
+                <div class="footer__site-link-header">Các giải pháp khác</div>
+                <ul class="footer__site-link-list">
+                    <li> <a href="#">Google Cloud</a></li>
+                    <li><a href="#">Google Workspace</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="break-line"></div>
+
+        <section class="footer__global">
+            <div class="footer__global-logo logo-google">Google</div>
+            <ul class="footer__global-links">
+                <li><a href="#">Quyền riêng tư</a></li>
+                <li><a href="#">Điều khoản</a></li>
+                <li><a href="#">Giới thiệu</a></li>
+                <li><a href="#">Các sản phẩm của Google</a></li>
+            </ul>
+            <div class="footer__global-more">
+                <div class="footer__global-more-help">
+                    <span class="material-icons icon-help">
+                        help
+                    </span>
+                    Trợ giúp
+                </div>
+                <select class="footer__global-more-language" name="language" id="language">
+                    <option value="vi">Tiếng Việt</option>
+                    <option value="en">English</option>
+                    <option value="opel">日本語</option>
+                    <option value="audi">한국어</option>
+                </select>
+            </div>
+        </section>
+
+    </footer>
 
     <script src="./js/animation.js"></script>
 </body>
