--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="drive__customers-dot">cham cham cham</div>
+                <div class="drive__customers-dot"></div>
                 <div class="drive__customers-icons">
                     <img src="https://kstatic.googleusercontent.com/files/f86032e4b76c46e9f9411776f487227f83e61f4c2769a19cb8fd7d53a6b35dd0d12d4981f7f205d69b4d397a36d604ae5f329e83d183077efff1563e0aa3ab67"
                         alt="Biểu tượng">
