--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@
                     họ
                 </h2>
                 <div class="drive__customers-sliders">
-                    <div class="drive__customers-slider-1">
+                  <div class="drive__customers-slider-cover">
+                    
+                    <div class="drive__customers-slider">
                         <div class="drive__customers-sliders-icon">
                             <img
                                 src="https://kstatic.googleusercontent.com/files/56d87c8f379a15041193391b51180fbb5935b90f781e9fd4c986c708a7bba4feb63e4a2bedd40f59781db773aed145886961efa322e1132a0ffbd5cf89841399">
@@ -210,17 +212,55 @@
                         <div class="drive__customers-sliders-link">
                             <a href="#">Read Story</a>
                         </div>
-                        <div class="drive__customers-btn btn-prev-slider">
-                            <span class="material-icons">
-                                chevron_left
-                            </span>
+                      </div>
+                      <div class="drive__customers-slider">
+                        <div class="drive__customers-sliders-icon">
+                            <img
+                                src="https://kstatic.googleusercontent.com/files/56d87c8f379a15041193391b51180fbb5935b90f781e9fd4c986c708a7bba4feb63e4a2bedd40f59781db773aed145886961efa322e1132a0ffbd5cf89841399">
                         </div>
-                        <div class="drive__customers-btn btn-next-slider">
-                            <span class="material-icons">
-                                chevron_right
-                            </span>
+                        <div class="drive__customers-sliders-heading">
+                            <h3>
+                                “Hầu hết thành viên trong nhóm chúng tôi đều đã quen dùng Drive và thấy Drive rất trực
+                                quan
+                                và dễ sử dụng. Vì vậy, chúng tôi không cần phải tập cách thích nghi và nhanh chóng sử
+                                dụng
+                                được ứng dụng này.”
+                            </h3>
                         </div>
+                        <div class="drive__customers-sliders-link">
+                            <a href="#">Read Story</a>
+                        </div>
+                      </div>
+                      <div class="drive__customers-slider">
+                        <div class="drive__customers-sliders-icon">
+                            <img
+                                src="https://kstatic.googleusercontent.com/files/56d87c8f379a15041193391b51180fbb5935b90f781e9fd4c986c708a7bba4feb63e4a2bedd40f59781db773aed145886961efa322e1132a0ffbd5cf89841399">
+                        </div>
+                        <div class="drive__customers-sliders-heading">
+                            <h3>
+                                “Hầu hết thành viên trong nhóm chúng tôi đều đã quen dùng Drive và thấy Drive rất trực
+                                quan
+                                và dễ sử dụng. Vì vậy, chúng tôi không cần phải tập cách thích nghi và nhanh chóng sử
+                                dụng
+                                được ứng dụng này.”
+                            </h3>
+                        </div>
+                        <div class="drive__customers-sliders-link">
+                            <a href="#">Read Story</a>
+                        </div>
+                      </div>
                     </div>
+                    
+                    <div class="drive__customers-btn btn-prev-slider">
+                      <span class="material-icons">
+                          chevron_left
+                      </span>
+                  </div>
+                  <div class="drive__customers-btn btn-next-slider">
+                      <span class="material-icons">
+                          chevron_right
+                      </span>
+                  </div>
                 </div>
                 <div class="drive__customers-dot"></div>
                 <div class="drive__customers-icons">
@@ -431,102 +471,6 @@
           </div>
         </section>
 
-        <section class="drive__customers">
-          <h2 class="drive__customers-title">
-            Hàng nghìn nhóm đã sử dụng Drive để cách mạng hóa cách làm việc của
-            họ
-          </h2>
-          <div class="drive__customers-sliders">
-            <div class="drive__customers-slider-cover">
-              <div class="drive__customers-slider">
-                <div class="drive__customers-sliders-icon">
-                  <img
-                    src="https://kstatic.googleusercontent.com/files/56d87c8f379a15041193391b51180fbb5935b90f781e9fd4c986c708a7bba4feb63e4a2bedd40f59781db773aed145886961efa322e1132a0ffbd5cf89841399"
-                  />
-                </div>
-                <div class="drive__customers-sliders-heading">
-                  <h3>
-                    “Hầu hết thành viên trong nhóm chúng tôi đều đã quen dùng
-                    Drive và thấy Drive rất trực quan và dễ sử dụng. Vì vậy,
-                    chúng tôi không cần phải tập cách thích nghi và nhanh chóng
-                    sử dụng được ứng dụng này.”
-                  </h3>
-                </div>
-                <div class="drive__customers-sliders-link">
-                  <a href="#">Read Story</a>
-                </div>
-              </div>
-              <div class="drive__customers-slider">
-                <div class="drive__customers-sliders-icon">
-                  <img
-                    src="https://kstatic.googleusercontent.com/files/56d87c8f379a15041193391b51180fbb5935b90f781e9fd4c986c708a7bba4feb63e4a2bedd40f59781db773aed145886961efa322e1132a0ffbd5cf89841399"
-                  />
-                </div>
-                <div class="drive__customers-sliders-heading">
-                  <h3>
-                    “Hầu hết thành viên trong nhóm chúng tôi đều đã quen dùng
-                    Drive và thấy Drive rất trực quan và dễ sử dụng. Vì vậy,
-                    chúng tôi không cần phải tập cách thích nghi và nhanh chóng
-                    sử dụng được ứng dụng này.”
-                  </h3>
-                </div>
-                <div class="drive__customers-sliders-link">
-                  <a href="#">Read Story</a>
-                </div>
-              </div>
-
-              <div class="drive__customers-slider">
-                <div class="drive__customers-sliders-icon">
-                  <img
-                    src="https://kstatic.googleusercontent.com/files/56d87c8f379a15041193391b51180fbb5935b90f781e9fd4c986c708a7bba4feb63e4a2bedd40f59781db773aed145886961efa322e1132a0ffbd5cf89841399"
-                  />
-                </div>
-                <div class="drive__customers-sliders-heading">
-                  <h3>
-                    “Hầu hết thành viên trong nhóm chúng tôi đều đã quen dùng
-                    Drive và thấy Drive rất trực quan và dễ sử dụng. Vì vậy,
-                    chúng tôi không cần phải tập cách thích nghi và nhanh chóng
-                    sử dụng được ứng dụng này.”
-                  </h3>
-                </div>
-                <div class="drive__customers-sliders-link">
-                  <a href="#">Read Story</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="drive__customers-btn btn-prev-slider">
-              <span class="material-icons"> chevron_left </span>
-            </div>
-            <div class="drive__customers-btn btn-next-slider">
-              <span class="material-icons"> chevron_right </span>
-            </div>
-          </div>
-
-          <div class="drive__customers-dot"></div>
-          <div class="drive__customers-icons">
-            <img
-              src="https://kstatic.googleusercontent.com/files/f86032e4b76c46e9f9411776f487227f83e61f4c2769a19cb8fd7d53a6b35dd0d12d4981f7f205d69b4d397a36d604ae5f329e83d183077efff1563e0aa3ab67"
-              alt="Biểu tượng"
-            />
-            <img
-              src="https://kstatic.googleusercontent.com/files/29b792a68930582e72cce6abdce5910a7f6898fec14fdbf07036c725230cd613d2d1f80657fa696b85eff8c2282f98628601386805cedfb5b24d5b3f6108df4e"
-              alt="Biểu tượng"
-            />
-            <img
-              src="https://kstatic.googleusercontent.com/files/3663ffbbf7255f1162366ed27679f72255a34fb98098d9ea80bf278b25f0d7e339040179651973c90be939c5149dc70faf800494209f0c1bca830a1bcc2f32b7"
-              alt="Biểu tượng"
-            />
-            <img
-              src="https://kstatic.googleusercontent.com/files/5a6cf652e91b79403fa438b24bd679778e1063b67889da8d50ec9b4b05eceac54d3d59d49fe5853a36fefc19665f284b518b083866f3c3a63983ac9439d9bc52"
-              alt="Biểu tượng"
-            />
-            <img
-              src="https://kstatic.googleusercontent.com/files/23093c1b646ca8f5100d596668d21ff720ec57445cbd6cce1d546002cf54a598fafe90d14bdaf6196ff62f66c73a4dc14d29b5bcb63b9ba5026d7efaf6a5c003"
-              alt="Biểu tượng"
-            />
-          </div>
-        </section>
         <section class="drive__statistics">
           <div class="drive__statistics-container">
             <h2 class="drive__statistics-title">
